@@ -15,6 +15,7 @@ SVN
 -bug#0001535: Tree Automation Difficult Due to Lack of Parent ID in Tree Nodes 
 -bug#0001549: Database crashes with use of array_to_sql_or
 -bug#0001557: Quotes in Text Format graph template field breaks graph
+-bug#0001587: 64bit HEX Strings don't convert to Decimal on 32bit Systems
 -bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
 -bug: When creating new graphs without a data source, print error to user instead of throwing php error
 
